# Pyrite

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  ISSUES.MD  README.md  api.html  architecture.html  assets.html  audio.html  audio_length.py  build.spec  config.json  deployment.html  frustum.py  genindex.html  index.html  lighting.html  lighting.py  main.html  main.py  meshes.html  noise.py  objects.inv  persistence.html  player.html  player.py  profiling.html  py-modindex.html  pyproject.toml  rendering.html  requirements-dev.txt  requirements.txt  run.py  save.db  scene.py  search.html  searchindex.js  settings.py  (+15 more)
.doctrees/: api.doctree  architecture.doctree  assets.doctree  audio.doctree  deployment.doctree  environment.pickle  index.doctree  lighting.doctree  main.doctree  meshes.doctree  persistence.doctree  player.doctree  profiling.doctree  rendering.doctree  setup.doctree  shaders.doctree  survival.doctree  terrain.doctree  testing.doctree  tutorials.doctree  ui.doctree
.doctrees/__intersphinx_cache__/: pygame_objects.inv
.doctrees/api/: camera.doctree  frustum.doctree  lighting.doctree  main.doctree  meshes.doctree  modules.doctree  noise.doctree  player.doctree  profiler.doctree  scene.doctree  settings.doctree  shader_program.doctree  sounds.doctree  terrain_gen.doctree  textures.doctree  ui.doctree  voxel_handler.doctree  world.doctree  world_objects.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  docs.yml  glsl_validate.yml  mutation.yml  mypy.yml  pylint.yml  ruff.yml  test.yml
__pycache__/: noise.noise2-8.py313.1.nbc  noise.noise2-8.py313.nbi  noise.noise3-13.py313.1.nbc  noise.noise3-13.py313.nbi
_modules/: camera.html  frustum.html  index.html  lighting.html  main.html  noise.html  player.html  profiler.html  scene.html  settings.html  shader_program.html  sounds.html  terrain_gen.html  textures.html  voxel_handler.html  world.html
_modules/meshes/: base_mesh.html  chunk_mesh.html  chunk_mesh_builder.html  cloud_mesh.html  cube_mesh.html  item_mesh.html  obj_mesh.html
_modules/ui/: components.html  hud.html  menus.html  meshes.html  text.html
_modules/world_objects/: chunk.html  clouds.html  item.html  sky.html  voxel_marker.html
_sources/: api.rst.txt  architecture.rst.txt  audio.rst.txt  index.rst.txt  lighting.rst.txt  main.rst.txt  meshes.rst.txt  persistence.rst.txt  player.rst.txt  rendering.rst.txt  setup.rst.txt  shaders.rst.txt  survival.rst.txt  terrain.rst.txt  testing.rst.txt  ui.rst.txt
_sources/api/: camera.rst.txt  frustum.rst.txt  lighting.rst.txt  main.rst.txt  meshes.rst.txt  modules.rst.txt  noise.rst.txt  player.rst.txt  profiler.rst.txt  scene.rst.txt  settings.rst.txt  shader_program.rst.txt  sounds.rst.txt  terrain_gen.rst.txt  textures.rst.txt  ui.rst.txt  voxel_handler.rst.txt  world.rst.txt  world_objects.rst.txt
_static/: custom.css
api/: camera.html  frustum.html  lighting.html  main.html  meshes.html  modules.html  noise.html  player.html  profiler.html  scene.html  settings.html  shader_program.html  sounds.html  terrain_gen.html  textures.html  ui.html  voxel_handler.html  world.html  world_objects.html
assets/stick/: stick.mtl
assets/wooden_pickaxe/: wooden_pickaxe.mtl
docs/: api.rst  architecture.rst  assets.rst  audio.rst  conf.py  deployment.rst  index.rst  lighting.rst  main.rst  meshes.rst  persistence.rst  player.rst  profiling.rst  rendering.rst  setup.rst  shaders.rst  survival.rst  terrain.rst  testing.rst  tutorials.rst  ui.rst
docs/_templates/apidoc/: module.rst.jinja  package.rst.jinja  toc.rst.jinja
meshes/: chunk_mesh.py  chunk_mesh_builder.py  cloud_mesh.py  item_mesh.py  obj_mesh.py
saves/: 1.db  33.db  Default_World.db  New_World.db  New_World_1.db  New_World_2.db  New_World_3.db  step_2_test.db
shaders/: chunk.frag  chunk.vert  clouds.frag  clouds.vert  item.frag  obj.frag  obj.vert  sky.vert  ui_block.frag  ui_block.vert  ui_color.frag  voxel_marker.frag  water.frag  water.vert
src/: camera.py  frustum.py  lighting.py  main.py  noise.py  player.py  profiler.py  scene.py  settings.py  shader_program.py  sounds.py  terrain_gen.py  textures.py  voxel_handler.py  world.py
src/meshes/: __init__.py  base_mesh.py  chunk_mesh.py  chunk_mesh_builder.py  cloud_mesh.py  cube_mesh.py  item_mesh.py  obj_mesh.py
src/shaders/: chunk.frag  chunk.vert  clouds.frag  clouds.vert  item.frag  item.vert  obj.frag  obj.vert  sky.frag  sky.vert  ui_block.frag  ui_block.vert  ui_color.frag  ui_color.vert  ui_text.frag  ui_text.vert  voxel_marker.frag  voxel_marker.vert
src/ui/: __init__.py  components.py  hud.py  menus.py  meshes.py  text.py
src/world_objects/: __init__.py  chunk.py  clouds.py  item.py  sky.py  voxel_marker.py
tests/: test_assets.py  test_base_mesh.py  test_database.py  test_docstrings.py  test_engine.py  test_noise.py  test_numba_constraints.py  test_player_logic.py  test_profiler.py  test_settings.py  test_terrain_gen.py  test_ui_meshes.py
world_objects/: chunk.py  clouds.py  item.py  sky.py
