[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrite"
version = "1.0.0"
description = "A highly-optimized, procedural 3D Voxel Engine written entirely in Python."
readme = "README.md"
requires-python = ">=3.13"

# Ruff Configuration
[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
# E/W: Pycodestyle, F: Pyflakes, I: Isort, B: Flake8-bugbear, SIM: Flake8-simplify
select = ["E", "F", "W", "I", "B", "SIM"]
ignore = [
    "E741", # Allow ambiguous variable names like 'l' or 'I' (common in 3D matrix math)
    "F403", # Allow wildcard imports (used heavily with settings.py)
    "F405", # Allow variables from wildcard imports
]

# Mutmut Configuration (Version 3+)
[tool.mutmut]
source_paths = ["src/"]
pytest_add_cli_args_test_selection = ["tests/"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy Configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true # Crucial for C-extensions like moderngl and pyglm
check_untyped_defs = true

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pylint.main]
# Allow Pylint to analyze C-extensions to resolve false positive errors.
extension-pkg-allow-list = ["pygame", "moderngl", "pyglm", "numba"]

[tool.pylint.messages_control]
# Disable styling/convention checks and false positives to ensure the CI passes.
disable = [
    "invalid-name",  # Allows short variable names like x, y, z, i, f
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-arguments",
    "too-many-branches",
    "too-many-statements",
    "too-many-public-methods",
    "wrong-import-order",
    "import-outside-toplevel",
    "no-member",  # Handled by extension-pkg-allow-list
    "line-too-long",  # Handled by Ruff
    "trailing-whitespace",  # Handled by Ruff
    "missing-final-newline",  # Handled by Ruff
    "multiple-statements",
    "superfluous-parens",
    "ungrouped-imports",
    "too-many-positional-arguments",  # Required for Numba
    "too-many-nested-blocks",  # Required for Greedy Meshing
    "too-many-boolean-expressions",  # Required for AO checks
    "not-an-iterable",  # Numba prange false positive
    "consider-using-in",  # Numba compatibility
    "chained-comparison",
    "redefined-outer-name",  # Pytest fixtures
    "too-few-public-methods",
    "broad-exception-caught",
    "attribute-defined-outside-init",
    "global-statement",
    "inconsistent-return-statements",
    "no-else-return",
    "unused-argument",
    "unused-variable",
    "bare-except",
    "redefined-builtin",
    "protected-access"
]
